writing test for missing lines

--- a/lang/es.json
+++ b/lang/es.json
@@ -204,5 +204,8 @@
   "Donate to the Community": "Donar a la Comunidad",
   "Donating to": "Donando a",
   "Are you sure you want to delete this event?": "¿Estás seguro de que quieres eliminar este evento?",
-  "Are you sure you want to exit this organization?": "¿Estás seguro de que quieres salir de esta organización?"
+  "Are you sure you want to exit this organization?": "¿Estás seguro de que quieres salir de esta organización?",
+  "This is the Profile tab here you can see all options related to account, app setting, invitation, help etc": "Esta es la pestaña de perfil donde puedes ver todas las opciones relacionadas con la cuenta, configuración de la aplicación, invitación, ayuda, etc.",
+  "You can edit application settings like language, theme etc from here": "Puedes editar configuraciones de la aplicación como idioma, tema, etc. desde aquí",
+  "For any help we are always there. You can reach us from here": "Para cualquier ayuda siempre estamos aquí. Puedes contactarnos desde aquí"
 }
