--- a/lang/pt.json
+++ b/lang/pt.json
@@ -204,5 +204,25 @@
   "Donate to the Community": "Doar para a Comunidade",
   "Donating to": "Doando para",
   "Are you sure you want to delete this event?": "Tem certeza de que deseja excluir este evento?",
-  "Are you sure you want to exit this organization?": "Tem certeza de que deseja sair desta organização?"
+  "Are you sure you want to exit this organization?": "Tem certeza de que deseja sair desta organização?",
+  "This is the Profile tab here you can see all options related to account, app setting, invitation, help etc": "Esta é a aba de Perfil, onde você pode ver todas as opções relacionadas à conta, configurações do aplicativo, convites, ajuda, etc.",
+  "You can edit application settings like language, theme etc from here": "Você pode editar as configurações do aplicativo, como idioma, tema, etc., a partir daqui",
+  "For any help we are always there. You can reach us from here": "Para qualquer ajuda, estamos sempre aqui. Você pode nos contatar a partir daqui",
+  "Current selected Organization Name": "Nome da organização atualmente selecionada",
+  "Click this button to see options related to switching, joining and leaving organization(s)": "Clique neste botão para ver opções relacionadas a trocar, juntar-se e sair de organizações",
+  "Current selected Organization's Name appears here": "O nome da organização atualmente selecionada aparece aqui",
+  "All your joined organizations appear over here you can click on them to change the current organization": "Todas as organizações às quais você se juntou aparecem aqui; você pode clicar nelas para mudar a organização atual",
+  "From this button you can join other listed organizations": "A partir deste botão, você pode se juntar a outras organizações listadas",
+  "To leave the current organization you can use this option": "Para sair da organização atual, você pode usar esta opção",
+  "This is the post card you can like and comment on the post from the options available": "Este é o cartão de postagem; você pode curtir e comentar na postagem a partir das opções disponíveis",
+  "This is the Events tab here you can see all event related information of the current selected organization": "Esta é a aba de Eventos; aqui você pode ver todas as informações relacionadas a eventos da organização atualmente selecionada",
+  "This is the home tab here you can see the latest post from other members of the current organization": "Esta é a aba Início; aqui você pode ver a última postagem de outros membros da organização atual",
+  "This section displays all the important posts set by the organization admin(s)": "Esta seção exibe todas as postagens importantes definidas pelos administradores da organização",
+  "Filter Events based on categories": "Filtre eventos com base em categorias",
+  "Filter Events between selected dates": "Filtre eventos entre as datas selecionadas",
+  "Description of event to see more details click on the card": "Descrição do evento; para ver mais detalhes, clique no cartão",
+  "This is the Create post tab here you can add post to the current selected organization": "Esta é a aba de Criar postagem; aqui você pode adicionar uma postagem à organização atualmente selecionada",
+  "This is the Chat tab here you can see all your messages of the current selected organization": "Esta é a aba de Chat; aqui você pode ver todas as suas mensagens da organização atualmente selecionada",
+  "To help your organization grow you can support them financially from here": "Para ajudar sua organização a crescer, você pode apoiá-la financeiramente a partir daqui",
+  "You are all set to go let's get you in": "Você está pronto para ir; vamos começar"
 }
