--- a/lang/zh.json
+++ b/lang/zh.json
@@ -204,5 +204,25 @@
   "Donate to the Community": "向社区捐款",
   "Donating to": "捐赠给",
   "Are you sure you want to delete this event?": "您确定要删除此活动吗？",
-  "Are you sure you want to exit this organization?": "您确定要退出这个组织吗？"
+  "Are you sure you want to exit this organization?": "您确定要退出这个组织吗？",
+  "This is the Profile tab here you can see all options related to account, app setting, invitation, help etc": "这是个人资料选项卡，您可以在此处查看与帐户、应用设置、邀请、帮助等相关的所有选项。",
+  "You can edit application settings like language, theme etc from here": "您可以从这里编辑应用程序设置，如语言、主题等。",
+  "For any help we are always there. You can reach us from here": "任何帮助我们都会在这里。您可以通过这里联系我们。",
+  "Current selected Organization Name": "当前选择的组织名称",
+  "Click this button to see options related to switching, joining and leaving organization(s)": "单击此按钮以查看与切换、加入和离开组织相关的选项。",
+  "Current selected Organization's Name appears here": "当前选择的组织名称将显示在此处。",
+  "All your joined organizations appear over here you can click on them to change the current organization": "您加入的所有组织都会显示在这里，您可以单击它们以更改当前的组织。",
+  "From this button you can join other listed organizations": "您可以通过此按钮加入其他列出的组织。",
+  "To leave the current organization you can use this option": "要离开当前组织，您可以使用此选项。",
+  "This is the post card you can like and comment on the post from the options available": "这是帖子卡片，您可以从可用的选项中点赞并评论帖子。",
+  "This is the Events tab here you can see all event related information of the current selected organization": "这是活动选项卡，您可以在此处查看当前选择组织的所有与活动相关的信息。",
+  "This is the home tab here you can see the latest post from other members of the current organization": "这是主页选项卡，您可以在此处查看当前组织其他成员的最新帖子。",
+  "This section displays all the important posts set by the organization admin(s)": "此部分显示由组织管理员设置的所有重要帖子。",
+  "Filter Events based on categories": "基于类别筛选事件",
+  "Filter Events between selected dates": "在选定的日期之间筛选事件",
+  "Description of event to see more details click on the card": "事件描述以查看更多详情，请单击卡片。",
+  "This is the Create post tab here you can add post to the current selected organization": "这是创建帖子选项卡，您可以在此处向当前选择的组织添加帖子。",
+  "This is the Chat tab here you can see all your messages of the current selected organization": "这是聊天选项卡，您可以在此处查看当前选择组织的所有消息。",
+  "To help your organization grow you can support them financially from here": "要帮助您的组织成长，您可以从这里提供财务支持。",
+  "You are all set to go let's get you in": "您已经准备好了，让我们开始吧。"
 }
