--- a/lang/en.json
+++ b/lang/en.json
@@ -204,5 +204,25 @@
   "Donate to the Community": "Donate to the Community",
   "Donating to": "Donating to",
   "Are you sure you want to delete this event?": "Are you sure you want to delete this event?",
-  "Are you sure you want to exit this organization?": "Are you sure you want to exit this organization?"
+  "Are you sure you want to exit this organization?": "Are you sure you want to exit this organization?",
+  "This is the Profile tab here you can see all options related to account, app setting, invitation, help etc": "This is the Profile tab here you can see all options related to account, app setting, invitation, help etc.",
+  "You can edit application settings like language, theme etc from here": "You can edit application settings like language, theme etc from here.",
+  "For any help, we are always there. You can reach us from here": "For any help, we are always there. You can reach us from here.",
+  "Current selected Organization Name": "Current selected Organization Name",
+  "Click this button to see options related to switching, joining and leaving organization(s)": "Click this button to see options related to switching, joining and leaving organization(s).",
+  "Current selected Organization's Name appears here": "Current selected Organization's Name appears here.",
+  "All your joined organizations appear over here you can click on them to change the current organization": "All your joined organizations appear over here you can click on them to change the current organization.",
+  "From this button you can join other listed organizations": "From this button you can join other listed organizations.",
+  "To leave the current organization you can use this option": "To leave the current organization you can use this option.",
+  "This is the post card you can like and comment on the post from the options available": "This is the post card you can like and comment on the post from the options available.",
+  "This is the Events tab here you can see all event related information of the current selected organization": "This is the Events tab here you can see all event related information of the current selected organization.",
+  "This is the home tab here you can see the latest post from other members of the current organization": "This is the home tab here you can see the latest post from other members of the current organization.",
+  "This section displays all the important post set by the organization admin(s)": "This section displays all the important post set by the organization admin(s).",
+  "Filter Events based on categories": "Filter Events based on categories.",
+  "Filter Events between selected dates": "Filter Events between selected dates.",
+  "Description of event to see more details click on the card": "Description of event to see more details click on the card.",
+  "This is the Create post tab here you can add post to the current selected organization": "This is the Create post tab here you can add post to the current selected organization.",
+  "This is the Chat tab here you can see all your messages of the current selected organization": "This is the Chat tab here you can see all your messages of the current selected organization.",
+  "To help your organization grow you can support them financially from here": "To help your organization grow you can support them financially from here.",
+  "You are all set to go let's get you in": "You are all set to go let's get you in."
 }
