--- a/lang/fr.json
+++ b/lang/fr.json
@@ -204,5 +204,25 @@
   "Donate to the Community": "Faire un don à la Communauté",
   "Donating to": "Don à",
   "Are you sure you want to delete this event?": "Êtes-vous sûr de vouloir supprimer cet événement?",
-  "Are you sure you want to exit this organization?": "Êtes-vous sûr de vouloir quitter cette organisation?"
+  "Are you sure you want to exit this organization?": "Êtes-vous sûr de vouloir quitter cette organisation?",
+  "This is the Profile tab here you can see all options related to account, app setting, invitation, help etc": "Ceci est l'onglet Profil où vous pouvez voir toutes les options liées au compte, aux paramètres de l'application, à l'invitation, à l'aide, etc.",
+  "You can edit application settings like language, theme etc from here": "Vous pouvez modifier les paramètres de l'application comme la langue, le thème, etc. depuis ici",
+  "For any help we are always there. You can reach us from here": "Pour toute aide, nous sommes toujours là. Vous pouvez nous joindre depuis ici",
+  "Current selected Organization Name": "Nom de l'organisation actuellement sélectionnée",
+  "Click this button to see options related to switching, joining and leaving organization(s)": "Cliquez sur ce bouton pour voir les options liées au changement, à l'adhésion et au départ d'organisation(s)",
+  "Current selected Organization's Name appears here": "Le nom de l'organisation actuellement sélectionnée apparaît ici",
+  "All your joined organizations appear over here you can click on them to change the current organization": "Toutes les organisations auxquelles vous avez adhéré apparaissent ici, vous pouvez cliquer sur elles pour changer l'organisation actuelle",
+  "From this button you can join other listed organizations": "À partir de ce bouton, vous pouvez rejoindre d'autres organisations répertoriées",
+  "To leave the current organization you can use this option": "Pour quitter l'organisation actuelle, vous pouvez utiliser cette option",
+  "This is the post card you can like and comment on the post from the options available": "Ceci est la carte de publication, vous pouvez aimer et commenter la publication à partir des options disponibles",
+  "This is the Events tab here you can see all event-related information of the current selected organization": "Ceci est l'onglet Événements, ici vous pouvez voir toutes les informations liées aux événements de l'organisation actuellement sélectionnée",
+  "This is the home tab here you can see the latest post from other members of the current organization": "Ceci est l'onglet Accueil, ici vous pouvez voir le dernier post des autres membres de l'organisation actuelle",
+  "This section displays all the important posts set by the organization admin(s)": "Cette section affiche tous les posts importants définis par le(s) administrateur(s) de l'organisation",
+  "Filter Events based on categories": "Filtrer les événements en fonction des catégories",
+  "Filter Events between selected dates": "Filtrer les événements entre les dates sélectionnées",
+  "Description of event to see more details click on the card": "Description de l'événement, pour voir plus de détails, cliquez sur la carte",
+  "This is the Create post tab here you can add post to the current selected organization": "Ceci est l'onglet Créer une publication, ici vous pouvez ajouter une publication à l'organisation actuellement sélectionnée",
+  "This is the Chat tab here you can see all your messages of the current selected organization": "Ceci est l'onglet Chat, ici vous pouvez voir tous vos messages de l'organisation actuellement sélectionnée",
+  "To help your organization grow you can support them financially from here": "Pour aider votre organisation à se développer, vous pouvez les soutenir financièrement depuis ici.",
+  "You are all set to go let's get you in": "Vous êtes prêt à partir, laissez-nous vous aider."
 }
