--- a/lang/ja.json
+++ b/lang/ja.json
@@ -204,5 +204,25 @@
   "Donate to the Community": "コミュニティに寄付する",
   "Donating to": "に寄付する",
   "Are you sure you want to delete this event?": "このイベントを削除してもよろしいですか？",
-  "Are you sure you want to exit this organization?": "この組織を退出してもよろしいですか？"
+  "Are you sure you want to exit this organization?": "この組織を退出してもよろしいですか？",
+  "This is the Profile tab here you can see all options related to account, app setting, invitation, help etc": "これはプロファイルタブです。ここでは、アカウント、アプリの設定、招待、ヘルプなどに関連するすべてのオプションを見ることができます。",
+  "You can edit application settings like language, theme etc from here": "ここから言語、テーマなどのアプリケーションの設定を編集できます。",
+  "For any help we are always there. You can reach us from here": "お手伝いが必要な場合はいつでもお手伝いします。ここからお問い合わせいただけます。",
+  "Current selected Organization Name": "現在選択されている組織の名前",
+  "Click this button to see options related to switching, joining and leaving organization(s)": "組織の切り替え、参加、退出に関連するオプションを見るには、このボタンをクリックしてください。",
+  "Current selected Organization's Name appears here": "現在選択されている組織の名前がここに表示されます。",
+  "All your joined organizations appear over here you can click on them to change the current organization": "参加したすべての組織がここに表示され、現在の組織を変更するにはそれらをクリックできます。",
+  "From this button you can join other listed organizations": "このボタンから他のリストされた組織に参加できます。",
+  "To leave the current organization you can use this option": "現在の組織を退出するには、このオプションを使用できます。",
+  "This is the post card you can like and comment on the post from the options available": "これは投稿カードです。利用可能なオプションから投稿にいいねやコメントをすることができます。",
+  "This is the Events tab here you can see all event related information of the current selected organization": "これはイベントタブです。ここでは、現在選択されている組織の関連するすべてのイベント情報を見ることができます。",
+  "This is the home tab here you can see the latest post from other members of the current organization": "これはホームタブです。ここでは、現在の組織の他のメンバーの最新の投稿を見ることができます。",
+  "This section displays all the important posts set by the organization admin(s)": "このセクションには組織の管理者によって設定されたすべての重要な投稿が表示されます。",
+  "Filter Events based on categories": "カテゴリに基づいてイベントをフィルタリング",
+  "Filter Events between selected dates": "選択した日付の間でイベントをフィルタリング",
+  "Description of event to see more details click on the card": "詳細を見るには、イベントの説明をクリックしてください。",
+  "This is the Create post tab here you can add post to the current selected organization": "これは投稿を作成するタブです。ここでは、現在選択されている組織に投稿を追加できます。",
+  "This is the Chat tab here you can see all your messages of the current selected organization": "これはチャットタブです。ここでは、現在選択されている組織のすべてのメッセージを見ることができます。",
+  "To help your organization grow you can support them financially from here": "組織の成長をサポートするためには、ここから経済的にサポートできます。",
+  "You are all set to go let's get you in": "準備が整いました。さあ、始めましょう。"
 }
