--- a/lang/en.json
+++ b/lang/en.json
@@ -207,7 +207,7 @@
   "Are you sure you want to exit this organization?": "Are you sure you want to exit this organization?",
   "This is the Profile tab here you can see all options related to account, app setting, invitation, help etc": "This is the Profile tab here you can see all options related to account, app setting, invitation, help etc.",
   "You can edit application settings like language, theme etc from here": "You can edit application settings like language, theme etc from here.",
-  "For any help, we are always there. You can reach us from here": "For any help, we are always there. You can reach us from here.",
+  "For any help we are always there. You can reach us from here": "For any help, we are always there. You can reach us from here.",
   "Current selected Organization Name": "Current selected Organization Name",
   "Click this button to see options related to switching, joining and leaving organization(s)": "Click this button to see options related to switching, joining and leaving organization(s).",
   "Current selected Organization's Name appears here": "Current selected Organization's Name appears here.",
