--- a/lang/es.json
+++ b/lang/es.json
@@ -205,7 +205,24 @@
   "Donating to": "Donando a",
   "Are you sure you want to delete this event?": "¿Estás seguro de que quieres eliminar este evento?",
   "Are you sure you want to exit this organization?": "¿Estás seguro de que quieres salir de esta organización?",
-  "This is the Profile tab here you can see all options related to account, app setting, invitation, help etc": "Esta es la pestaña de perfil donde puedes ver todas las opciones relacionadas con la cuenta, configuración de la aplicación, invitación, ayuda, etc.",
-  "You can edit application settings like language, theme etc from here": "Puedes editar configuraciones de la aplicación como idioma, tema, etc. desde aquí",
-  "For any help we are always there. You can reach us from here": "Para cualquier ayuda siempre estamos aquí. Puedes contactarnos desde aquí"
+  "This is the Profile tab here you can see all options related to account, app setting, invitation, help etc": "Esta es la pestaña de Perfil, aquí puedes ver todas las opciones relacionadas con la cuenta, configuración de la aplicación, invitación, ayuda, etc.",
+  "You can edit application settings like language, theme etc from here": "Puedes editar la configuración de la aplicación, como el idioma, el tema, etc., desde aquí",
+  "For any help we are always there. You can reach us from here": "Para cualquier ayuda, siempre estamos aquí. Puedes contactarnos desde aquí",
+  "Current selected Organization Name": "Nombre de la organización actualmente seleccionada",
+  "Click this button to see options related to switching, joining and leaving organization(s)": "Haz clic en este botón para ver opciones relacionadas con cambiar, unirse y salir de organizaciones",
+  "Current selected Organization's Name appears here": "El nombre de la organización actualmente seleccionada aparece aquí",
+  "All your joined organizations appear over here you can click on them to change the current organization": "Todas las organizaciones a las que te has unido aparecen aquí; puedes hacer clic en ellas para cambiar la organización actual",
+  "From this button you can join other listed organizations": "Desde este botón, puedes unirte a otras organizaciones enumeradas",
+  "To leave the current organization you can use this option": "Para salir de la organización actual, puedes usar esta opción",
+  "This is the post card you can like and comment on the post from the options available": "Esta es la tarjeta de la publicación; puedes darle me gusta y comentar en la publicación desde las opciones disponibles",
+  "This is the Events tab here you can see all event related information of the current selected organization": "Esta es la pestaña de Eventos; aquí puedes ver toda la información relacionada con eventos de la organización actualmente seleccionada",
+  "This is the home tab here you can see the latest post from other members of the current organization": "Esta es la pestaña de Inicio; aquí puedes ver la última publicación de otros miembros de la organización actual",
+  "This section displays all the important post set by the organization admin(s)": "Esta sección muestra todas las publicaciones importantes establecidas por el(los) administrador(es) de la organización",
+  "Filter Events based on categories": "Filtrar eventos según categorías",
+  "Filter Events between selected dates": "Filtrar eventos entre las fechas seleccionadas",
+  "Description of event to see more details click on the card": "Descripción del evento; para ver más detalles, haz clic en la tarjeta",
+  "This is the Create post tab here you can add post to the current selected organization": "Esta es la pestaña de Crear publicación; aquí puedes agregar una publicación a la organización actualmente seleccionada",
+  "This is the Chat tab here you can see all your messages of the current selected organization": "Esta es la pestaña de Chat; aquí puedes ver todos tus mensajes de la organización actualmente seleccionada",
+  "To help your organization grow you can support them financially from here": "Para ayudar a que tu organización crezca, puedes apoyarla financieramente desde aquí",
+  "You are all set to go let's get you in": "Estás listo para ir, vamos a empezar"
 }
