--- a/lang/fr.json
+++ b/lang/fr.json
@@ -217,7 +217,7 @@
   "This is the post card you can like and comment on the post from the options available": "Ceci est la carte de publication, vous pouvez aimer et commenter la publication à partir des options disponibles",
   "This is the Events tab here you can see all event-related information of the current selected organization": "Ceci est l'onglet Événements, ici vous pouvez voir toutes les informations liées aux événements de l'organisation actuellement sélectionnée",
   "This is the home tab here you can see the latest post from other members of the current organization": "Ceci est l'onglet Accueil, ici vous pouvez voir le dernier post des autres membres de l'organisation actuelle",
-  "This section displays all the important posts set by the organization admin(s)": "Cette section affiche tous les posts importants définis par le(s) administrateur(s) de l'organisation",
+  "This section displays all the important post set by the organization admin(s)": "Cette section affiche tous les posts importants définis par le(s) administrateur(s) de l'organisation",
   "Filter Events based on categories": "Filtrer les événements en fonction des catégories",
   "Filter Events between selected dates": "Filtrer les événements entre les dates sélectionnées",
   "Description of event to see more details click on the card": "Description de l'événement, pour voir plus de détails, cliquez sur la carte",
