--- a/lang/ja.json
+++ b/lang/ja.json
@@ -217,7 +217,7 @@
   "This is the post card you can like and comment on the post from the options available": "これは投稿カードです。利用可能なオプションから投稿にいいねやコメントをすることができます。",
   "This is the Events tab here you can see all event related information of the current selected organization": "これはイベントタブです。ここでは、現在選択されている組織の関連するすべてのイベント情報を見ることができます。",
   "This is the home tab here you can see the latest post from other members of the current organization": "これはホームタブです。ここでは、現在の組織の他のメンバーの最新の投稿を見ることができます。",
-  "This section displays all the important posts set by the organization admin(s)": "このセクションには組織の管理者によって設定されたすべての重要な投稿が表示されます。",
+  "This section displays all the important post set by the organization admin(s)": "このセクションには組織の管理者によって設定されたすべての重要な投稿が表示されます。",
   "Filter Events based on categories": "カテゴリに基づいてイベントをフィルタリング",
   "Filter Events between selected dates": "選択した日付の間でイベントをフィルタリング",
   "Description of event to see more details click on the card": "詳細を見るには、イベントの説明をクリックしてください。",
