--- a/lang/pt.json
+++ b/lang/pt.json
@@ -217,7 +217,7 @@
   "This is the post card you can like and comment on the post from the options available": "Este é o cartão de postagem; você pode curtir e comentar na postagem a partir das opções disponíveis",
   "This is the Events tab here you can see all event related information of the current selected organization": "Esta é a aba de Eventos; aqui você pode ver todas as informações relacionadas a eventos da organização atualmente selecionada",
   "This is the home tab here you can see the latest post from other members of the current organization": "Esta é a aba Início; aqui você pode ver a última postagem de outros membros da organização atual",
-  "This section displays all the important posts set by the organization admin(s)": "Esta seção exibe todas as postagens importantes definidas pelos administradores da organização",
+  "This section displays all the important post set by the organization admin(s)": "Esta seção exibe todas as postagens importantes definidas pelos administradores da organização",
   "Filter Events based on categories": "Filtre eventos com base em categorias",
   "Filter Events between selected dates": "Filtre eventos entre as datas selecionadas",
   "Description of event to see more details click on the card": "Descrição do evento; para ver mais detalhes, clique no cartão",
