--- a/lang/zh.json
+++ b/lang/zh.json
@@ -217,7 +217,7 @@
   "This is the post card you can like and comment on the post from the options available": "这是帖子卡片，您可以从可用的选项中点赞并评论帖子。",
   "This is the Events tab here you can see all event related information of the current selected organization": "这是活动选项卡，您可以在此处查看当前选择组织的所有与活动相关的信息。",
   "This is the home tab here you can see the latest post from other members of the current organization": "这是主页选项卡，您可以在此处查看当前组织其他成员的最新帖子。",
-  "This section displays all the important posts set by the organization admin(s)": "此部分显示由组织管理员设置的所有重要帖子。",
+  "This section displays all the important post set by the organization admin(s)": "此部分显示由组织管理员设置的所有重要帖子。",
   "Filter Events based on categories": "基于类别筛选事件",
   "Filter Events between selected dates": "在选定的日期之间筛选事件",
   "Description of event to see more details click on the card": "事件描述以查看更多详情，请单击卡片。",
