Fixes #2192 #1602 , Improving Filters UI (#2245)
* Add:Filters

* Add:Documentation

* Add:MultiLingual Support

* Fix:Format

* Reduced: Lines of Codes

* Fixed:Tests

* Add:Fix Failing test case

* Add:Tests for requested lines

* Add:test for filter changing

* Fixed:changes requested

* Add:Changes

* Fix:Documentation

* Fix:Dart version

* Fixed:spacing

* Remove: useless docs

* Remove:Spaces

* Removed:spaces

* Fix:Constant Sizes

* Fix:Format issues

* Minor FIx

* Fix:format

* Fix:Dynamic size

* Fix:Dynamic size

* Fix:Failing test

* Fix:Failing test

--- a/lang/de.json
+++ b/lang/de.json
@@ -89,6 +89,16 @@
   "Cancel": "Abbrechen",
   "Done": "Fertig",
   "Explore Events": "Veranstaltungen erkunden",
+  "Filters": "Filter",
+  "Filter by Date": "Filtern nach Datum",
+  "All Events": "Alle Veranstaltungen",
+  "Show all events": "Alle Veranstaltungen anzeigen",
+  "Show all events created by you": "Alle Veranstaltungen anzeigen, die von Ihnen erstellt wurden",
+  "Registered Events": "Registrierte Veranstaltungen",
+  "Show all events you have registered": "Alle Veranstaltungen anzeigen, für die Sie sich registriert haben",
+  "Show events for all": "Alle Veranstaltungen anzeigen",
+  "Show invite-only events": "Nur Einladungsveranstaltungen anzeigen",
+
   "Add Date": "Datum hinzufügen",
   "Event": "Vorfall",
   "My Events": "Meine Veranstaltungen",
