--- a/lang/en.json
+++ b/lang/en.json
@@ -95,6 +95,15 @@
   "Cancel": "Cancel",
   "Done": "Done",
   "Explore Events": "Explore Events",
+  "Filters": "Filters",
+  "Filter by Date": "Filter by Date",
+  "All Events": "All Events",
+  "Show all events": "Show all events",
+  "Show all events created by you": "Show all events created by you",
+  "Registered Events": "Registered Events",
+  "Show all events you have registered": "Show all events you have registered",
+  "Show events for all": "Show events for all",
+  "Show invite-only events": "Show invite-only events",
   "Add Date": "Add Date",
   "Event": "Event",
   "My Events": "My Events",
