--- a/lang/zh.json
+++ b/lang/zh.json
@@ -90,11 +90,20 @@
   "Cancel": "取消",
   "Done": "完成",
   "Explore Events": "探索事件",
+  "Filters": "过滤器",
+  "Filter by Date": "按日期过滤",
+  "All Events": "所有活动",
+  "Show all events": "显示所有活动",
+  "My Events": "我的活动",
+  "Show all events created by you": "显示由您创建的所有活动",
+  "Registered Events": "已注册活动",
+  "Show all events you have registered": "显示您已注册的所有活动",
+  "Public Events": "公共活动",
+  "Show events for all": "显示所有人的活动",
+  "Private Events": "私人活动",
+  "Show invite-only events": "仅显示邀请活动",
   "Add Date": "添加日期",
   "Event": "事件",
-  "My Events": "我的活动",
-  "Public Events": "公共事件",
-  "Private Events": "私人活动",
   "Liked by": "喜欢的人",
   "Comments": "评论",
   "FirstName LastName": "名字姓氏",
