--- a/lang/en.json
+++ b/lang/en.json
@@ -169,8 +169,69 @@
   "Dark Theme": "Dark Theme",
   "No organizations found Please contact your admin": "No organizations found ! Please contact your admin",
   "For complete access, please": "For complete access, please",
-  "  join an organization.": "  join an organization.",
-  "JOIN":"JOIN",
+  "join an organization.": "  join an organization.",
+  "JOIN": "JOIN",
   "Camera": "Camera",
-  "Gallery": "Gallery"
+  "Gallery": "Gallery",
+  "NEXT": "NEXT",
+  "COMPLETE": "COMPLETE",
+  "Start app tour to know talawa functioning": "Start app tour to know talawa functioning",
+  "Scan QR": "Scan QR",
+  "Add tag": "Add tag",
+  "Enter the Tag": "Enter the Tag",
+  "Title": "Title",
+  "Choose on map": "Choose on map",
+  "Where is the event?": "Where is the event?",
+  "Add Members": "Add Members",
+  "All Events": "All Events",
+  "Created Events": "Created Events",
+  "Registered Events": "Registered Events",
+  "Send": "Send",
+  "Write your comment here..": "Write your comment here..",
+  "You need access": "You need access",
+  "Request access, or switch to an account with access": "Request access, or switch to an account with access",
+  "Request Access": "Request Access",
+  "Last Name": "Last Name",
+  "First Name": "First Name",
+  "Edit Profile": "Edit Profile",
+  "Log Out": "Log Out",
+  "Please Select an amount": "Please Select an amount",
+  "Input custom amount": "Input custom amount",
+  "Organisation Name": "Organisation Name",
+  "Choose an Organization": "Choose an Organization",
+  "Your Report has been sent to the Admin": "Your Report has been sent to the Admin",
+  "Report the post to the Admin": "Report the post to the Admin",
+  "Do you really want to delete the post?": "Do you really want to delete the post?",
+  "Liked": "Liked",
+  "Add Task Title": "Add Task Title",
+  "Describe the task": "Describe the task",
+  "Looks like there aren't any events.": "Looks like there aren't any events.",
+  "You have not created any event.": "You have not created any event.",
+  "No registered events are present": "No registered events are present",
+  "There aren't any public events.": "There aren't any public events.",
+  "There aren't any private events.": "There aren't any private events.",
+  "Donate to the Community": "Donate to the Community",
+  "Donating to": "Donating to",
+  "Are you sure you want to delete this event?": "Are you sure you want to delete this event?",
+  "Are you sure you want to exit this organization?": "Are you sure you want to exit this organization?",
+  "This is the Profile tab here you can see all options related to account, app setting, invitation, help etc": "This is the Profile tab here you can see all options related to account, app setting, invitation, help etc.",
+  "You can edit application settings like language, theme etc from here": "You can edit application settings like language, theme etc from here.",
+  "For any help we are always there. You can reach us from here": "For any help, we are always there. You can reach us from here.",
+  "Current selected Organization Name": "Current selected Organization Name",
+  "Click this button to see options related to switching, joining and leaving organization(s)": "Click this button to see options related to switching, joining and leaving organization(s).",
+  "Current selected Organization's Name appears here": "Current selected Organization's Name appears here.",
+  "All your joined organizations appear over here you can click on them to change the current organization": "All your joined organizations appear over here you can click on them to change the current organization.",
+  "From this button you can join other listed organizations": "From this button you can join other listed organizations.",
+  "To leave the current organization you can use this option": "To leave the current organization you can use this option.",
+  "This is the post card you can like and comment on the post from the options available": "This is the post card you can like and comment on the post from the options available.",
+  "This is the Events tab here you can see all event related information of the current selected organization": "This is the Events tab here you can see all event related information of the current selected organization.",
+  "This is the home tab here you can see the latest post from other members of the current organization": "This is the home tab here you can see the latest post from other members of the current organization.",
+  "This section displays all the important post set by the organization admin(s)": "This section displays all the important post set by the organization admin(s).",
+  "Filter Events based on categories": "Filter Events based on categories.",
+  "Filter Events between selected dates": "Filter Events between selected dates.",
+  "Description of event to see more details click on the card": "Description of event to see more details click on the card.",
+  "This is the Create post tab here you can add post to the current selected organization": "This is the Create post tab here you can add post to the current selected organization.",
+  "This is the Chat tab here you can see all your messages of the current selected organization": "This is the Chat tab here you can see all your messages of the current selected organization.",
+  "To help your organization grow you can support them financially from here": "To help your organization grow you can support them financially from here.",
+  "You are all set to go let's get you in": "You are all set to go let's get you in."
 }
