bfix: Localization for App Tour

--- a/lang/de.json
+++ b/lang/de.json
@@ -233,5 +233,10 @@
   "You are all set to go let's get you in": "Sie sind bereit zu gehen, lassen Sie uns Ihnen helfen.",
   "There are no posts in this organization": "Es gibt keine Beiträge in dieser Organisation",
   "Create your first post": "Erstellen Sie Ihren ersten Beitrag",
-  "You have no post in this organization": "Sie haben keinen Beitrag in dieser Organisation"
+  "You have no post in this organization": "Sie haben keinen Beitrag in dieser Organisation",
+  "You can create a new event from here": "Hier können Sie eine neue Veranstaltung erstellen",
+  "You are all set to go lets get you in": "Sie sind bereit zu gehen, lassen Sie uns Sie hereinbringen",
+  "App Tour": "App-Tour",
+  "Start": "Starten",
+  "Skip": "Überspringen"
 }
