--- a/lang/en.json
+++ b/lang/en.json
@@ -233,5 +233,10 @@
   "Create your first event": "Create your first event",
   "There are no posts in this organization": "There are no posts in this organization",
   "Create your first post": "Create your first post",
-  "You have no post in this organization": "You have no post in this organization"
+  "You have no post in this organization": "You have no post in this organization",
+  "You can create a new event from here": "You can create a new event from here",
+  "You are all set to go lets get you in": "You are all set to go lets get you in",
+  "App Tour": "App Tour",
+  "Start": "Start",
+  "Skip": "Skip"
 }
