--- a/lang/pt.json
+++ b/lang/pt.json
@@ -233,5 +233,10 @@
   "Create your first event": "Crie seu primeiro evento",
   "There are no posts in this organization": "Não há posts nesta organização",
   "Create your first post": "Crie sua primeira postagem",
-  "You have no post in this organization": "Você não tem nenhuma postagem nesta organização"
+  "You have no post in this organization": "Você não tem nenhuma postagem nesta organização",
+  "You can create a new event from here": "Você pode criar um novo evento aqui",
+  "You are all set to go lets get you in": "Você está tudo pronto para ir, vamos te levar",
+  "App Tour": "Tour do aplicativo",
+  "Start": "Iniciar",
+  "Skip": "Pular"
 }
