--- a/lang/hi.json
+++ b/lang/hi.json
@@ -77,7 +77,7 @@
   "Keep Public": "सार्वजनिक रखें",
   "Keep Registerable": "पंजीकरण योग्य रखें",
   "Event Details": "घटना की जानकारी",
-  "Register": "रजिस्टर करें",
+  "Register": "पंजीकरण करें",
   "Created by": "के द्वारा बनाई गई",
   "public": "सह लोक",
   "private": "निजी",
@@ -98,7 +98,7 @@
   "Show events for all": "सभी के लिए घटनाएँ दिखाएं",
   "Show invite-only events": "आमंत्रित लोगों के लिए घटनाएँ दिखाएं",
   "Add Date": "तिथि जोड़ें",
-  "Event": "प्रतिस्पर्धा",
+  "Event": "इवेंट्स",
   "My Events": "मेरे कार्यक्रम",
   "Public Events": "सार्वजनिक कार्यक्रम",
   "Private Events": "निजी कार्यक्रम",
@@ -125,7 +125,7 @@
   "Write here what do you want to share": "यहां लिखें कि आप क्या साझा करना चाहते हैं",
   "Join selected organisation": "चयनित संगठन से जुड़ें",
   "Home": "घर",
-  "Events": "आयोजन",
+  "Events": "इवेंट्स",
   "Chat": "चैट",
   "Chat Screen": "चैट स्क्रीन",
   "Confirm": "पुष्टि करें",
@@ -238,5 +238,22 @@
   "You are all set to go lets get you in": "आप सभी सेट हैं जाने के लिए, चलो आपको भेजते हैं",
   "App Tour": "ऐप टूर",
   "Start": "शुरू करें",
-  "Skip": "छोड़ दें"
+  "Skip": "छोड़ दें",
+  "Posts": "पोस्ट्स",
+  "Tasks": "टास्क",
+  "Or": "या",
+  "Please select any amount": "कृपया कोई राशि का चयन करें",
+  "Registered": "पंजीकृत",
+  "Not Registrable": "पंजीकरण योग्य नहीं",
+  "Enter the title of your post": "अपने पोस्ट का शीर्षक दर्ज करें",
+  "General": "सामान्य",
+  "Help & Support": "सहायता और समर्थन",
+  "Talawa Docs": "Talawa दस्तावेज",
+  "All day": "पूरा दिन",
+  "Join an Organisation": "एक संगठन से जुड़ें",
+  "DONATE": "दान करें",
+  "Permission Denied": "अनुमति अस्वीकृत",
+  "Camera permission is required, to use this feature, give permission from app settings": "कैमरे की अनुमति आवश्यक है, इस फ़ीचर का उपयोग करने के लिए, ऐप सेटिंग्स से अनुमति दें",
+  "SETTINGS": "सेटिंग्स",
+  "LogOut": "लॉगआउट"
 }
